fixed rent now and view rates alignment

--- a/state-storage-workshops/src/app/rent-now/rent-now.component.scss
+++ b/state-storage-workshops/src/app/rent-now/rent-now.component.scss
@@ -1,79 +1,3 @@
-// @import "../../styles.scss";
-
-// .contentHolder {
-//   padding-top: 100px;
-//   min-height: 96vh;
-//   margin-bottom: 50px;
-
-//   .scroll-wrapper {
-//     -webkit-overflow-scrolling: touch;
-//     overflow-x: auto;
-
-//     iframe {
-//       width: 100%;
-//       overflow: auto;
-//     }
-//   }
-// }
-
-// .view-rates {
-//   background-color: #edf1ee;
-//   padding: 64px;
-// }
-
-// @media only screen and (max-width: 991px) and (min-width: 768px) {
-//   .contentHolder {
-//     padding-top: 60px;
-//   }
-
-//   // .view-rates {
-//   //   padding: 32px;
-//   // }
-// }
-
-// @media only screen and (max-width: 767px) and (min-width: 601px) {
-//   .contentHolder {
-//     padding-top: 60px;
-//   }
-
-//   .view-rates {
-//     padding: 40px;
-//   }
-
-//   .view-rates-padding {
-//     padding-top: 24px;
-//   }
-// }
-
-// @media screen and (max-width: 600px) {
-//   .contentHolder {
-//     padding-top: 60px;
-//   }
-
-//   .view-rates {
-//     background-color: #edf1ee;
-//     padding: 16px 0;
-//   }
-
-//   .scroll-wrapper {
-//     -webkit-overflow-scrolling: touch;
-//     overflow-x: scroll;
-
-//     iframe {
-//       width: 100%;
-//       overflow: scroll;
-//     }
-//   }
-
-//   img {
-//     height: 200px;
-//     width: 100%;
-//   }
-
-//   .view-rates-padding {
-//     padding-top: 24px;
-//   }
-// }
 
 @import "../../styles.scss";
 
@@ -190,65 +114,15 @@ table {
   }
 }
 
-.view-rate-text {
-  margin-top: 36px;
-}
-
-
-// .padding-top {
-//   padding-top: 100px;
-// }
-
 .background-padding {
   padding: 64px;
 }
 
-// @media only screen and (max-width: 600px) {
-//   .scroll-wrapper {
-//     -webkit-overflow-scrolling: touch;
-//     overflow-x: scroll;
-//   }
-
-//   .background-padding {
-//     padding: 24px 0;
-
-//     p {
-//       margin-block-end: 0;
-//     }
-//   }
-
-//   .view-rate-heading {
-//     display: inline;
-//   }
-
-//   .padding-top {
-//     padding-top: 56px;
-//   }
-// }
-
-
-// @media only screen and (max-width: 767px) {
-//   .view-rate-heading {
-//     display: block;
-//     margin-block-start: 36px;
-//     margin-block-end: 16px;
-//   }
-// }
-
-
-// @media only screen and (max-width: 991px) {
-//   .padding-top {
-//     padding-top: 56px;
-//   }
-// }
 @media only screen and (max-width: 991px) and (min-width: 768px) {
     .contentHolder {
       padding-top: 100px;
     }
-  
-    // .view-rates {
-    //   padding: 32px;
-    // }
+
   }
   
   @media only screen and (max-width: 767px) and (min-width: 601px) {
